<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePageFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/whereDoYouWantGoButton"
            android:layout_width="257dp"
            android:layout_height="37dp"
            android:background="@drawable/rounded_corners"
            android:fontFamily="sans-serif-medium"
            android:text="@string/where_do_you_want_to_go"
            android:textAllCaps="false"
            android:textColor="@color/colorNotFocusable"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewHomePageFragment"
            app:layout_constraintEnd_toEndOf="@+id/imageViewHomePageFragment"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/imageViewHomePageFragment"
            app:layout_constraintTop_toTopOf="@+id/imageViewHomePageFragment"
            app:layout_constraintVertical_bias="0.757" />

        <ImageView
            android:id="@+id/imageViewHomePageFragment"
            android:layout_width="0dp"
            android:layout_height="350dp"
            android:background="#A9FBF9F9"
            android:contentDescription="@string/napoliImg"
            android:src="@drawable/home_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/planeimg"
            android:elevation="5dp"
            android:rotation="33"
            android:src="@drawable/ic_baseline_airplanemode_active_24"
            app:layout_constraintBottom_toBottomOf="@+id/whereDoYouWantGoButton"
            app:layout_constraintEnd_toEndOf="@+id/whereDoYouWantGoButton"
            app:layout_constraintHorizontal_bias="0.051"
            app:layout_constraintStart_toStartOf="@+id/whereDoYouWantGoButton"
            app:layout_constraintTop_toTopOf="@+id/whereDoYouWantGoButton"
            app:layout_constraintVertical_bias="0.476" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewHomePageFragment"
            app:layout_constraintVertical_bias="0.0">

            <ImageButton
                android:id="@+id/imageButtonHotel"
                android:layout_width="133dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:contentDescription="@string/hotelimg"
                android:src="@drawable/ic_baseline_hotel_24"
                android:tint="@color/colorBlackBackground" />

            <ImageButton
                android:id="@+id/imageButtonRestaurant"
                android:layout_width="139dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:contentDescription="@string/resraurantimg"
                android:src="@drawable/ic_baseline_restaurant_menu_24"
                android:tint="@color/colorBlackBackground" />

            <ImageButton
                android:id="@+id/imageButtonAttraction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:contentDescription="@string/attractionimg"
                android:src="@drawable/ic_ride" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewMapHomePaqeFragment"
            android:layout_width="410dp"
            android:layout_height="192dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/mapimg"
            android:src="@drawable/mappa_home_image"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/discover_nearby_places"
            android:textColor="@color/colorNotFocusable"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/imageViewMapHomePaqeFragment"
            app:layout_constraintEnd_toEndOf="@+id/imageViewMapHomePaqeFragment"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/positionImage"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/nearmeimg"
            android:src="@drawable/ic_baseline_place_24"
            app:layout_constraintBottom_toTopOf="@+id/imageViewMapHomePaqeFragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="1.0"
            app:tint="@color/colorPrimary" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/powered_by"
            android:textColor="@color/colorBlackBackground"
            android:textSize="12sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>